fix: hide top modal when is overlapped

--- a/client/src/theme/components/modals.scss
+++ b/client/src/theme/components/modals.scss
@@ -212,3 +212,7 @@ ion-modal .inner-content {
 .file-upload-modal {
   --width: 842px;
 }
+
+.overlapped-modal {
+    visibility: hidden;
+}
